[tool.poetry]
name = "py-cooler-display"
version = "0.1.0"
description = ""
authors = ["TuaHN <hoangtua.vn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
hidapi = "^0.14.0.post2"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
